// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders all intents 1`] = `
.c0 {
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #FFFFFF;
  color: #4F2ABA;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50px;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="plain"
  size="medium"
>
  plain
</span>
`;

exports[`Badge renders all intents 2`] = `
.c0 {
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #e0ffe7;
  color: #0b6b38;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50px;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="positive"
  size="medium"
>
  positive
</span>
`;

exports[`Badge renders all intents 3`] = `
.c0 {
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #e0f2ff;
  color: #0059b2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50px;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="info"
  size="medium"
>
  info
</span>
`;

exports[`Badge renders all intents 4`] = `
.c0 {
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #DEE1E5;
  color: #4C535B;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50px;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="neutral"
  size="medium"
>
  neutral
</span>
`;

exports[`Badge renders all intents 5`] = `
.c0 {
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #FFEBC4;
  color: #724B00;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50px;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="warning"
  size="medium"
>
  warning
</span>
`;

exports[`Badge renders all intents 6`] = `
.c0 {
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #FFE5E9;
  color: #B2121F;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50px;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="critical"
  size="medium"
>
  critical
</span>
`;

exports[`Badge renders all sizes 1`] = `
.c0 {
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #E8E5FF;
  color: #412399;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50px;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="default"
  size="medium"
>
  default (medium)
</span>
`;

exports[`Badge renders all sizes 2`] = `
.c0 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 16px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #E8E5FF;
  color: #412399;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50px;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="default"
  size="small"
>
  small
</span>
`;

exports[`Badge renders all sizes 3`] = `
.c0 {
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background-color: #E8E5FF;
  color: #412399;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50px;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="default"
  size="medium"
>
  medium
</span>
`;

exports[`Badge renders all sizes 4`] = `
.c0 {
  font-weight: 600;
  font-size: 1rem;
  line-height: 32px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  background-color: #E8E5FF;
  color: #412399;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 50px;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="default"
  size="large"
>
  large
</span>
`;
